Fix incorrect arguments to setex

--- a/views/monitor.jade
+++ b/views/monitor.jade
@@ -12,11 +12,10 @@ if sequence
           window.location = '/';
         }
       },1000);
-    style{
+    style.
       #timer {
         font-size: big;
       }
-    }
     
   block content
     p When #{number} recieves a call, it will respond by dialing #{sequence}.
