Allow pound and star in phone dialing

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,5 +12,5 @@ block content
     label="Number: "
       input(type="tel",name='number',placeholder='+18085551234',pattern="\\+\\d+")
     label="Sequence: "
-      input(type="text",name='sequence',pattern="\\d+")
+      input(type="text",name='sequence',pattern="[\\d\\#\\*]+")
     input(type="Submit")
